[project]
name = "sandia-pymdt"
version = "1.4.2518"
description = "Python Scripting Front-End for the Microgrid Design Toolkit"
readme = "README.rst"
dependencies = ["pythonnet>=3.0.3"]
requires-python = ">=3.9.0"
authors = [
  { name="John Eddy", email="jpeddy@sandia.gov" },
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
]
license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://energy.sandia.gov/programs/electric-grid/advanced-microgrids/microgrid-design-toolkit/"
GitHub = "https://github.com/sandialabs/pymdt"

#[tool.setuptools]